# OpenGLTemplate

./: CMakeLists.txt  README.md  main.cpp
Google_tests/: CMakeLists.txt  DummyTest.cpp
Google_tests/lib/googletest/src/: gtest.cc
dependencies/glew-2.1.0/: CMakeLists.txt
